--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <body>
   <h1>Liam Nell</h1>
-  <p>Simplify</p>
+  <p>Welcome to my website, where ice cream dances</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
