simplify index.html
This is the beginning of redesigning the simplifysmallbiz.com website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html>
  
 <body>
-  <h1>Liam Nell</h1>
-  <p>Welcome to my website, where ice cream dances</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <div>
+   <h1>Simplify</h1>
+  <p>We simplify life for Small Business Owners by helping Small Businesses integrate with the right online applications</p> 
+ </div>
+ 
+ <div>
+  <h2>Kill, Automate, Delegate, Do!</h2>
+  <p>Fours mantra's every business owner should live by:</p>
+  <ol>
+   <li>If you shouldn't do something, <span>kill it</span>.</li>
+   <li>If you can automate something, <span>automate it</span>.</li>
+   <li>If someone else can do it, <span>delegate it</span>.</li>
+   <li>What's left? <span>do it</span>!</li>
+  </ol>
+  <p>Automate Workflows, Marketing, Sales Management and More.</p>
+  <div class="block-button">
+   <button class="submit inquiry">Submit Your Enquiry</button>
+  </div> 
+ </div>
+
 </body>
  
 </html>
