--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  
 <body>
  <div>
-   <h1>Simplify</h1>
+   <h1 class="heading">Simplify</h1>
   <p>We simplify life for Small Business Owners by helping Small Businesses integrate with the right online applications</p> 
  </div>
  
