--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </ol>
   <p>Automate Workflows, Marketing, Sales Management and More.</p>
   <div class="block-button">
-   <button class="submit inquiry">Submit Your Enquiry</button>
+   <button class="submit-inquiry">Submit Your Enquiry</button>
   </div> 
  </div>
 
