--- a/index.html
+++ b/index.html
@@ -1,29 +1,49 @@
-<html>
-<head>
-  <link rel="stylesheet" href="resources/css/style.css">
-</head> 
- 
-<body>
- <div>
-   <h1 class="heading">Simplify</h1>
-  <p>We simplify life for Small Business Owners by helping Small Businesses integrate with the right online applications</p> 
- </div>
- 
- <div>
-  <h2>Kill, Automate, Delegate, Do!</h2>
-  <p>Fours mantra's every business owner should live by:</p>
-  <ol>
-   <li>If you shouldn't do something, <span>kill it</span>.</li>
-   <li>If you can automate something, <span>automate it</span>.</li>
-   <li>If someone else can do it, <span>delegate it</span>.</li>
-   <li>What's left? <span>do it</span>!</li>
-  </ol>
-  <p>Automate Workflows, Marketing, Sales Management and More.</p>
-  <div class="block-button">
-   <button class="submit-inquiry">Submit Your Enquiry</button>
-  </div> 
- </div>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <link rel="stylesheet" type="text/css" href="resources\css\style.css" <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simplify</title>
+</head>
+
+<body>
+  <!-- Top navigation -->
+  <div class="topnav">
+    <!-- left-aligned links (default) -->
+    <div>
+      <a class="active" href="#home">Home</a>
+    </div>
+    <!-- right-aligned links -->
+    <div class="topnav-right">
+      <a href="#buy">Buy</a>
+      <a href="#estimate">Get An Estimate</a>
+      <a href="#contact">Contact Us</a>
+      <a href="#log-in">Log In</a>
+    </div>
+  </div>
+  <div class="heading">
+    <h1>Simplify</h1>
+    <img class="logo" src="resources\images\cropped-EmblemBliksem_llc.png" alt="Bliksem logo">
+    <p>We simplify life for Small Business Owners by helping Small Businesses integrate with the right online
+      applications</p>
+  </div>
+
+  <div>
+    <h2>Kill, Automate, Delegate, Do!</h2>
+    <p>Fours mantra's every business owner should live by:</p>
+    <ol>
+      <li>If you shouldn't do something, <span>kill it</span>.</li>
+      <li>If you can automate something, <span>automate it</span>.</li>
+      <li>If someone else can do it, <span>delegate it</span>.</li>
+      <li>What's left? <span>do it</span>!</li>
+    </ol>
+    <p>Automate Workflows, Marketing, Sales Management and More.</p>
+    <div class="block-button">
+      <button class="submit-inquiry">Submit Your Enquiry</button>
+    </div>
+  </div>
 </body>
- 
+
 </html>
