Added Page Title
I have added a page title to the about.html

--- a/about.html
+++ b/about.html
@@ -8,5 +8,9 @@
 		/>
 		<title>About Simplify</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="page-title">
+			<h2>About Us</h2>
+		</div>
+	</body>
 </html>
