--- a/about.html
+++ b/about.html
@@ -9,6 +9,21 @@
 		<title>About Simplify</title>
 	</head>
 	<body>
+		<!-- Top navigation -->
+		<div class="topnav">
+			<!-- left-aligned links -->
+			<div>
+				<a href="index.html">Home</a>
+			</div>
+			<!-- right-aligned links -->
+			<div class="topnav-right">
+				<a href="#buy">Buy</a>
+				<a href="#estimate">Get An Estimate</a>
+				<a href="#contact">Contact Us</a>
+				<a href="about.html">About</a>
+				<a href="#log-in">Log In</a>
+			</div>
+		</div>
 		<div class="page-title">
 			<h2>About Us</h2>
 		</div>
