Connected CSS to about.index
Connected the CSS file to the about.index file

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 			rel="stylesheet"
 			type="text/css"
 			href="resources\css\style.css"
-			<meta
-			charset="UTF-8"
 		/>
+		<meta charset="UTF-8" />
 		<meta
 			http-equiv="X-UA-Compatible"
 			content="IE=edge"
