--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<script src="main.js"></script>
 		<title>About Simplify</title>
 	</head>
 	<body>
