--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<script src="main.js"></script>
 		<title>Simplify</title>
 	</head>
 
