--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
 		<div class="topnav">
 			<!-- left-aligned links (default) -->
 			<div>
-				<a
-					class="active"
-					href="#home"
-					>Home</a
-				>
+				<a href="#home">Home</a>
 			</div>
 			<!-- right-aligned links -->
 			<div class="topnav-right">
