Add Window Alert
Added Javascript to about.html which creates a pop-up window when a button is clicked.

--- a/about.html
+++ b/about.html
@@ -33,5 +33,8 @@
 		<div class="page-title">
 			<h2>About Us</h2>
 		</div>
+		<div class="button">
+			<button onclick="window.alert()">Open window</button>
+		</div>
 	</body>
 </html>
