--- a/about.html
+++ b/about.html
@@ -34,7 +34,11 @@
 			<h2>About Us</h2>
 		</div>
 		<div class="button">
-			<button onclick="window.alert()">Open window</button>
+			<button
+				onclick="window.alert('Hope you are enjoying the website!')"
+			>
+				Open window
+			</button>
 		</div>
 	</body>
 </html>
