Changed Nav Bar
Made the nav bar useful to my website

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 			</div>
 			<!-- right-aligned links -->
 			<div class="topnav-right">
-				<a href="#buy">Buy</a>
-				<a href="#estimate">Get An Estimate</a>
-				<a href="#contact">Contact Us</a>
+				<a href="#javascript">Javascript Sandbox</a>
+				<a href="#css">CSS Sandbox</a>
 				<a href="about.html">About</a>
 				<a href="#log-in">Log In</a>
 			</div>
