--- a/about.html
+++ b/about.html
@@ -17,15 +17,14 @@
 	<body>
 		<!-- Top navigation -->
 		<div class="topnav">
-			<!-- left-aligned links -->
+			<!-- left-aligned links (default) -->
 			<div>
-				<a href="index.html">Home</a>
+				<a href="#home">Home</a>
 			</div>
 			<!-- right-aligned links -->
 			<div class="topnav-right">
-				<a href="#buy">Buy</a>
-				<a href="#estimate">Get An Estimate</a>
-				<a href="#contact">Contact Us</a>
+				<a href="#javascript">Javascript Sandbox</a>
+				<a href="#css">CSS Sandbox</a>
 				<a href="about.html">About</a>
 				<a href="#log-in">Log In</a>
 			</div>
