Some Javascript tests

--- a/javascript.html
+++ b/javascript.html
@@ -13,6 +13,7 @@
 		/>
 		<title>Document</title>
 		<script src="main.js"></script>
+		<script src="javascript.js"></script>
 		<title>Javascript Sandbox</title>
 	</head>
 
@@ -30,6 +31,9 @@
 				<a href="about.html">About</a>
 				<a href="#log-in">Log In</a>
 			</div>
+		</div>
+		<div>
+			<p id="demo1"></p>
 		</div>
 	</body>
 </html>
