--- a/css.html
+++ b/css.html
@@ -21,12 +21,12 @@
 		<div class="topnav">
 			<!-- left-aligned links (default) -->
 			<div>
-				<a href="#index.html">Home</a>
+				<a href="index.html">Home</a>
 			</div>
 			<!-- right-aligned links -->
 			<div class="topnav-right">
-				<a href="#javascript.html">Javascript Sandbox</a>
-				<a href="#css.html">CSS Sandbox</a>
+				<a href="javascript.html">Javascript Sandbox</a>
+				<a href="css.html">CSS Sandbox</a>
 				<a href="about.html">About</a>
 				<a href="#log-in">Log In</a>
 			</div>
