--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="resources\css\style.css"
-		/>
-		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<script src="main.js"></script>
-		<title>Simplify</title>
-	</head>
 
-	<body>
-		<!-- Top navigation -->
-		<div class="topnav">
-			<!-- left-aligned links (default) -->
-			<div>
-				<a href="index.html">Home</a>
-			</div>
-			<!-- right-aligned links -->
-			<div class="topnav-right">
-				<a href="javascript.html">Javascript Sandbox</a>
-				<a href="css.html">CSS Sandbox</a>
-				<a href="about.html">About</a>
-				<a href="#log-in">Log In</a>
-			</div>
+<head>
+	<link rel="stylesheet" type="text/css" href="resources\css\style.css" />
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="main.js"></script>
+	<title>Simplify</title>
+</head>
+
+<body>
+	<!-- Top navigation -->
+	<div class="topnav">
+		<!-- left-aligned links (default) -->
+		<div>
+			<a href="index.html">Home</a>
 		</div>
-	</body>
+		<!-- right-aligned links -->
+		<div class="topnav-right">
+			<a href="javascript.html">Javascript Sandbox</a>
+			<a href="css.html">CSS Sandbox</a>
+			<a href="about.html">About</a>
+			<a href="#log-in">Log In</a>
+		</div>
+	</div>
+	<div class="heading">
+		<h1>Liam's Coding Cheatsheet</h1>
+	</div>
+</body>
+
 </html>
