Chagnes to html and css
added a list of languages

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 	<div class="heading">
 		<h1>Liam's Coding Cheatsheet</h1>
 	</div>
+	<div classs="lang-menu">
+		<ul>
+			<li>Javascipt</li>
+			<li>HTML</li>
+			<li>CSS</li>
+		</ul>
+	</div>
 </body>
 
 </html>
