--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 	</div>
 	<div classs="lang-menu">
 		<ul>
-			<li>Javascipt</li>
+			<button type="button">
+				<li>Javascipt</li>
+			</button>
 			<li>HTML</li>
 			<li>CSS</li>
 		</ul>
