--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 			<button type="button">
 				<li>Javascipt</li>
 			</button>
-			<li>HTML</li>
-			<li>CSS</li>
+			<button type="button">
+				<li>HTML</li>
+			</button>
+			<button type="button">
+				<li>CSS</li>
+			</button>
 		</ul>
 	</div>
 </body>
