list to paragraph

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 	<div classs="lang-menu">
 		<ul>
 			<button type="button">
-				<li>Javascipt</li>
+				<p>Javascipt</p>
 			</button>
 			<button type="button">
-				<li>HTML</li>
+				<p>HTML</p>
 			</button>
 			<button type="button">
-				<li>CSS</li>
+				<p>CSS</p>
 			</button>
 		</ul>
 	</div>
